adding Advanced_Convolutional_layers
simplify many convolution building blocks

--- a/DL/Advanced_Convolutional_layers.ipynb
+++ b/DL/Advanced_Convolutional_layers.ipynb
@@ -1,6 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e2d8d261",
+   "metadata": {},
+   "source": [
+    "# <font style=\"color:#0015FF\">Advanced Convolutional Neural Networks</font> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01d4bb8d",
+   "metadata": {},
+   "source": [
+    "by: **Amr Abdelhamed**\n",
+    "\n",
+    "**[Linkedin profile](https://www.linkedin.com/in/amrabdelhamed69/)\n",
+    "[Github repo](https://github.com/Amrabdelhamed611/ML_Implementation/tree/main/DL)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bb86845",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Residual-Block\" data-toc-modified-id=\"Residual-Block-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Residual Block</a></span></li><li><span><a href=\"#Bottleneck-Residual-Block\" data-toc-modified-id=\"Bottleneck-Residual-Block-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Bottleneck Residual Block</a></span></li><li><span><a href=\"#Linear-BottleNecks\" data-toc-modified-id=\"Linear-BottleNecks-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Linear BottleNecks</a></span></li><li><span><a href=\"#Inverted-Residual-Block\" data-toc-modified-id=\"Inverted-Residual-Block-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Inverted Residual Block</a></span></li><li><span><a href=\"#Depth-Wise-Separable-Convolution\" data-toc-modified-id=\"Depth-Wise-Separable-Convolution-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Depth-Wise Separable Convolution</a></span></li><li><span><a href=\"#Squeeze-and-Excitation-Block\" data-toc-modified-id=\"Squeeze-and-Excitation-Block-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Squeeze and Excitation Block</a></span></li><li><span><a href=\"#MBConv\" data-toc-modified-id=\"MBConv-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>MBConv</a></span></li><li><span><a href=\"#Fused-Inverted-Residual-(Fused-MBConv)-:\" data-toc-modified-id=\"Fused-Inverted-Residual-(Fused-MBConv)-:-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>Fused Inverted Residual (Fused MBConv) :</a></span></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>Conclusion</a></span></li><li><span><a href=\"#Resources\" data-toc-modified-id=\"Resources-10\"><span class=\"toc-item-num\">10&nbsp;&nbsp;</span>Resources</a></span></li></ul></div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "d440e600",
@@ -102,7 +132,7 @@
    "id": "a2b92997",
    "metadata": {},
    "source": [
-    "## Residual Block :\n",
+    "## Residual Block\n",
     "use direct connection to skip some layers(called skip connection) , in a way the connection passes input $x$ deeper in the network without apply any transformation on it.\n",
     "\n",
     "the output of the layer is without skip connection: $H(x)= F(wx+b) $ where $F$ an activation function.\n",
@@ -177,12 +207,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f50986c9",
    "metadata": {},
    "source": [
-    "##  Bottleneck Residual Block :\n",
+    "##  Bottleneck Residual Block\n",
     "bottleneck layer has fewer neurons than the layer below or above it.such a layer encourages the network to compress feature representations to best fit in the available space.\n",
     "\n",
     "A Bottleneck Residual Block takes an input of shape `HxWxC`, then reduces it to `HxWxC/r` using `1x1` conv, then applies a `3x3` conv and finally scale up the output to the same feature dimension as the input,`HxWxC` using again a 1x1 conv , and use skip connection to add the bottleneck output to the . \n",
@@ -262,7 +291,7 @@
    "id": "be445fcf",
    "metadata": {},
    "source": [
-    "## Linear BottleNecks:\n",
+    "## Linear BottleNecks\n",
     "Linear BottleNecks were introduced in MobileNetV2. A Linear BottleNeck Block is a BottleNeck Block without the last activation. the authors discussed how loss in performance due to dying rule."
    ]
   },
@@ -334,12 +363,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "100d7061",
    "metadata": {},
    "source": [
-    "## Inverted Residual Block:\n",
+    "## Inverted Residual Block\n",
     "think of inverted residual as Bottleneck Residual Block but expand the features maps instead of reduce them.\n",
     "\n",
     "Inverted Residual Block: takes an input of shape `HxWxC`, then expand it to `HxWxC*e` using `1x1` conv, then applies a `3x3` conv and finally scale up the output to the same feature dimension as the input `HxWxC` using again a `1x1` conv , and use skip connection to add the bottleneck output to the .\n",
@@ -414,12 +442,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "264d938c",
    "metadata": {},
    "source": [
-    "## Depth-Wise Separable Convolution:\n",
+    "## Depth-Wise Separable Convolution\n",
     "\n",
     "The idea is spatial dimension `HxW` of a filter can be separated from the depth `C` of the filter by apply filter on the the spatial dimension and output will has the same depth as the input the filter will only apply on the `Hxw`.\n",
     "\n",
@@ -510,12 +537,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2a779170",
    "metadata": {},
    "source": [
-    "## Squeeze and Excitation Block:\n",
+    "## Squeeze and Excitation Block\n",
     "squeeze excitation makes the neural nets able to map the channels dependency along with access to global information (means use information from the whole batch not only the sample). \n",
     " \n",
     "**Squeeze :**\n",
@@ -597,7 +623,7 @@
     }
    },
    "source": [
-    "## MBConv :\n",
+    "## MBConv \n",
     "a key component in Efficient net.\n",
     "it is slightly different then Inverted Residual :\n",
     "* normalization is applied to both depth and point convolution. \n",
@@ -678,7 +704,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8428806c",
    "metadata": {},
@@ -761,7 +786,7 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "Now we have the building blocks of many **convolutional neural network architectures** like `Res-Nets`, `SE-Net`, `Mobile-Nets`, `Efficient-Nets` so we can read and understand the idea discussed on papers which use the building blocks we Built also implement them (highly recommended)."
+    "Now we have the building blocks of many **convolutional neural network architectures** like `Res-Nets`, `SE-Net`, `Mobile-Nets`, `Efficient-Nets` so we can read , understand , implement various papers which uses the building blocks we Built."
    ]
   },
   {
@@ -769,7 +794,7 @@
    "id": "542623a2",
    "metadata": {},
    "source": [
-    "## Resources:\n",
+    "## Resources\n",
     "* [Brief introduction of mobilenetv1 / V2 / V3 lightweight network ](https://developpaper.com/brief-introduction-of-mobilenetv1-v2-v3-lightweight-network/)\n",
     "* [Inverted Residual Block paper](https://paperswithcode.com/method/inverted-residual-block)\n",
     "* [Squeeze and Excitation Networks Explained ](https://amaarora.github.io/2020/07/24/SeNet.html)\n",
@@ -819,13 +844,18 @@
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
-   "skip_h1_title": false,
+   "skip_h1_title": true,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
-   "toc_position": {},
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "195.188px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
